--- a/GuoKuApp/package.json
+++ b/GuoKuApp/package.json
@@ -6,6 +6,7 @@
     "start": "react-native start"
   },
   "dependencies": {
-    "react-native": "^0.17.0"
+    "react-native": "^0.17.0",
+    "react-native-scrollable-tab-view": "^0.3.4"
   }
 }
