--- a/GuoKuApp/package.json
+++ b/GuoKuApp/package.json
@@ -8,5 +8,12 @@
   "dependencies": {
     "react-native": "^0.17.0",
     "react-native-scrollable-tab-view": "^0.3.4"
+  },
+  "devDependencies": {
+    "babel-eslint": "^4.1.6",
+    "eslint-config-standard": "^4.4.0",
+    "eslint-config-standard-react": "^1.2.1",
+    "eslint-plugin-react": "^3.15.0",
+    "eslint-plugin-standard": "^1.3.1"
   }
 }
