--- a/GuoKuApp/package.json
+++ b/GuoKuApp/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^4.1.6",
+    "eslint": "^1.10.3",
     "eslint-config-standard": "^4.4.0",
     "eslint-config-standard-react": "^1.2.1",
     "eslint-plugin-react": "^3.15.0",
