--- a/GuoKuApp/package.json
+++ b/GuoKuApp/package.json
@@ -9,7 +9,8 @@
     "react-native": "^0.17.0",
     "react-native-floating-label-text-input": "0.0.8",
     "react-native-floating-labels": "^1.0.0",
-    "react-native-scrollable-tab-view": "^0.3.4"
+    "react-native-scrollable-tab-view": "^0.3.4",
+    "rn-navbar": "^0.2.3"
   },
   "devDependencies": {
     "babel-eslint": "^4.1.6",
