--- a/GuoKuApp/package.json
+++ b/GuoKuApp/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "react-native": "^0.17.0",
     "react-native-scrollable-tab-view": "^0.3.4",
+    "react-native-storage": "0.0.11",
     "rn-navbar": "^0.2.3"
   },
   "devDependencies": {
