--- a/GuoKuApp/package.json
+++ b/GuoKuApp/package.json
@@ -6,9 +6,14 @@
     "start": "react-native start"
   },
   "dependencies": {
+    "react": "^0.14.6",
+    "react-dom": "^0.14.6",
     "react-native": "^0.17.0",
+    "react-native-image-progress": "^0.4.0",
+    "react-native-progress": "^2.2.0",
     "react-native-scrollable-tab-view": "^0.3.4",
     "react-native-storage": "0.0.11",
+    "react-tween-state": "^0.1.4",
     "rn-navbar": "^0.2.3"
   },
   "devDependencies": {
